--- a/ProjetoLogin/ProjetoLogin/ProjetoLogin.csproj
+++ b/ProjetoLogin/ProjetoLogin/ProjetoLogin.csproj
@@ -46,28 +46,37 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Apresentacao\Cadastre-se.cs">
+    <Compile Include="Apresentacao\Principal.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Apresentacao\Cadastre-se.Designer.cs">
-      <DependentUpon>Cadastre-se.cs</DependentUpon>
+    <Compile Include="Apresentacao\Principal.Designer.cs">
+      <DependentUpon>Principal.cs</DependentUpon>
     </Compile>
-    <Compile Include="Apresentacao\Form1.cs">
+    <Compile Include="Apresentacao\CadastreSe.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Apresentacao\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Apresentacao\CadastreSe.Designer.cs">
+      <DependentUpon>CadastreSe.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Apresentacao\Loguin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Apresentacao\Loguin.Designer.cs">
+      <DependentUpon>Loguin.cs</DependentUpon>
     </Compile>
     <Compile Include="DAL\Conexao.cs" />
     <Compile Include="DAL\LoginDalComandos.cs" />
     <Compile Include="Modelo\Controle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Apresentacao\Cadastre-se.resx">
-      <DependentUpon>Cadastre-se.cs</DependentUpon>
+    <EmbeddedResource Include="Apresentacao\Principal.resx">
+      <DependentUpon>Principal.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Apresentacao\Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Apresentacao\CadastreSe.resx">
+      <DependentUpon>CadastreSe.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Apresentacao\Loguin.resx">
+      <DependentUpon>Loguin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -77,6 +86,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -91,6 +101,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\06_113688.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
