--- a/ProjetoLogin/ProjetoLogin/ProjetoLogin.csproj
+++ b/ProjetoLogin/ProjetoLogin/ProjetoLogin.csproj
@@ -80,14 +80,8 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -103,6 +97,36 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\06_113688.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\08_113679.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cad_medico.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cad_medico1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cad_medico2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\08_1136791.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\41_113670.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\06_1136881.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\17_113699.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\25_113671.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\44_113675.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
